Wed May  5 08:44:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/dds/PublisherListener.cpp:
        * connectors/dds4ccm/impl/dds/SubscriberListener.cpp:
          Fixed incorrect trace statements

Wed May  5 08:21:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/dds/PublisherListener.cpp:
        * connectors/dds4ccm/impl/dds/SubscriberListener.cpp:
          Added some more debug statements

Tue May  4 18:16:17 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplication/Domain_Application_Impl.cpp:
          Fixed layout of debug message

        * connectors/dds4ccm/impl/dds/DataReaderListener.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/dds/DataWriterListener.h:
        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
        * connectors/dds4ccm/impl/dds/PublisherListener.h:
        * connectors/dds4ccm/impl/dds/PublisherListener.cpp:
        * connectors/dds4ccm/impl/dds/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/dds/SubscriberListener.h:
        * connectors/dds4ccm/impl/dds/SubscriberListener.cpp:
          Let the proxy methods return DDS::CCM_* pointers

Tue May  4 12:41:49 UTC 2010  Marijke Hengstmengel <m.hengstmengel@remedy.nl>

        * connectors/ami4ccm/ami4ccm/ami4ccm.idl:
        * connectors/ami4ccm/examples/Hello/Base/Hello.mpc:
        * connectors/ami4ccm/examples/Hello/descriptors/Plan.cdp:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
        * connectors/ami4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/ami4ccm/tests/Exceptions/Base/ExceptionT.mpc:
        * connectors/ami4ccm/tests/Exceptions/descriptors/Plan.cdp: